--- a/.github/workflows/oracle-db-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-db-schedule-dev-backup.yml
@@ -33,8 +33,8 @@ jobs:
             echo "]}" >> $GITHUB_OUTPUT
             echo $GITHUB_OUTPUT
             cat $GITHUB_OUTPUT
-            echo ${{ github.path }}
-            cat ${{ github.path }}
+            echo ${{ github }}
+            cat ${{ github }}
           #fi
   # run-workflow-call:
   #   needs: prepare-workflow-call
