--- a/.github/workflows/oracle-db-schedule-delius-dev-backup.yml
+++ b/.github/workflows/oracle-db-schedule-delius-dev-backup.yml
@@ -3,11 +3,6 @@ on:
   schedule:
     - cron: '30 08 * * 1,2,4,5'
     - cron: '30 08 * * 3'
-  push:
-    branches:
-      - DBA-531-BACKUP-SCHEDULE
-    paths:
-      - .github/workflows/oracle-db-schedule-delius-dev-backup.yml
 jobs:
   prepare-parameters:
     runs-on: ubuntu-latest
@@ -17,13 +12,12 @@ jobs:
       - name: Parameters
         id: parameters
         run: |
-          #[ "${{github.event.schedule}}" == '30 08 * * 1,2,4,5' ] && Period="daily" || Period="weekly"
-          #echo "Period=$Period" >> $GITHUB_OUTPUT
-          echo "Period=daily" >> $GITHUB_OUTPUT
+          [ "${{github.event.schedule}}" == '30 08 * * 1,2,4,5' ] && Period="daily" || Period="weekly"
+          echo "Period=$Period" >> $GITHUB_OUTPUT
   run-workflow-call:
     needs: prepare-parameters
     uses:
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@DBA-531-BACKUP
+      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-backup.yml@main
     with:
       TargetEnvironment: delius-core-dev
       TargetHost: delius_primarydb
