--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -192,7 +192,7 @@ jobs:
         run: |
           echo SUBNET_ARN=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2a" --query "Subnets | [0].SubnetArn" --output text) >> $GITHUB_OUTPUT
           SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text)
-          echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:subnet/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
+          echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
           
 
       - name: Create datasync location for temp efs
