--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -191,14 +191,15 @@ jobs:
         id: get-ec2-config
         run: |
           echo SUBNET_ARNS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetArn" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
+          echo SUBNET_IDS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetId" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
           SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text)
           echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
 
       - name: Create EFS mount and access point
         run: |
           
-           # for each subnet (in ${{ steps.get-ec2-config.outputs.SUBNET_ARNS }} as comma separated values), create a mount target
-            IFS=',' read -ra SUBNETS <<< "${{ steps.get-ec2-config.outputs.SUBNET_ARNS }}"
+           # for each subnet (in ${{ steps.get-ec2-config.outputs.SUBNET_IDS }} as comma separated values), create a mount target
+            IFS=',' read -ra SUBNETS <<< "${{ steps.get-ec2-config.outputs.SUBNET_IDS }}"
             for subnet in "${SUBNETS[@]}"; do
               aws efs create-mount-target --file-system-id ${{ steps.get-temp-efs-id.outputs.TEMP_EFS_ID }} --subnet-id $subnet --security-group ${{ steps.get-ec2-config.outputs.SECURITY_GROUP_ARN }} --output text --query 'MountTargetId'
               if [[ $? -eq 0 ]]; then
