--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -195,7 +195,7 @@ jobs:
           echo SUBNET_IDS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetId" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
           echo SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text) >> $GITHUB_OUTPUT
           SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text)
-          echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2::security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
+          echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
 
       - name: Create EFS mount and access point
         run: |
