--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -119,12 +119,6 @@ jobs:
           role-session-name: githubactionsrolesession
           aws-region: "eu-west-2"
 
-      - name: install aws-cli
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip
-          sudo pip3 install awscli
-
       - name: Use latest recovery point arn
         if: ${{ github.event.inputs.source_recovery_point_id == '' }}
         run: |
@@ -193,8 +187,8 @@ jobs:
           echo SUBNET_ARNS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetArn" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
           echo SUBNET_ARN=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets [0].SubnetArn" --output text) >> $GITHUB_OUTPUT
           echo SUBNET_IDS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetId" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
-          echo SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text) >> $GITHUB_OUTPUT
-          SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-dev" --query "SecurityGroups[].GroupId" --output text)
+          echo SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-${{ github.event.inputs.source_env }}" --query "SecurityGroups[].GroupId" --output text) >> $GITHUB_OUTPUT
+          SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-${{ github.event.inputs.source_env }}" --query "SecurityGroups[].GroupId" --output text)
           echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
 
       - name: Create EFS mount and access point
@@ -281,26 +275,43 @@ jobs:
           role-session-name: githubactionsrolesession
           aws-region: "eu-west-2"
 
-      - name: install aws-cli
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip
-          sudo pip3 install awscli
-      - name: install aws-cli
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip
-          sudo pip3 install awscli
-
       - name: Get first directory listed in s3 bucket
         id: get-directory
         run: |
-            echo DIRECTORY=$(aws s3 ls s3://${{ github.event.inputs.destination_env }}-ldap-data-refresh-incoming/ --recursive | head -n 1 | awk '{print $4}') >> $GITHUB_OUTPUT
+            echo DIRECTORY=$(aws s3 ls s3://test-ldap-data-refresh-incoming/ | grep -o 'aws-backup[^/]*' | tr -d '\n') >> $GITHUB_OUTPUT
+
+      - name: Check directory
+        run: | 
+            if [[ "${{ steps.get-directory.outputs.DIRECTORY }}" == "" ]]; then
+              echo "No directory found in s3 bucket"
+              exit 1
+            fi
+
+      - name: Get temp EFS ID
+        id: get-dest-efs-id
+        run: |
+          DEST_EFS_ID=$(aws efs describe-file-systems --creation-token ${{ github.event.inputs.destination_env }}-ldap --output text --query 'FileSystems[0].FileSystemId')
+          if [[ $? -eq 0 ]]; then
+            echo "DEST_EFS_ID=DEST_EFS_ID" >> $GITHUB_OUTPUT
+          else
+            echo "Failed to get DEST_EFS_ID"
+            exit 1
+          fi
+
+      - name: Get EFS EC2 config
+        id: get-ec2-config
+        run: |
+          echo SUBNET_ARNS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetArn" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
+          echo SUBNET_ARN=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets [0].SubnetArn" --output text) >> $GITHUB_OUTPUT
+          echo SUBNET_IDS=$(aws ec2 describe-subnets --filters "Name=tag:Name,Values=*-private-eu-west-2*" --query "Subnets[].SubnetId" --output json |  jq -r '. | @csv') >> $GITHUB_OUTPUT
+          echo SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-${{ github.event.inputs.destination_env }}" --query "SecurityGroups[].GroupId" --output text) >> $GITHUB_OUTPUT
+          SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --filters "Name=group-name,Values=ldap-efs-${{ github.event.inputs.destination_env }}" --query "SecurityGroups[].GroupId" --output text)
+          echo SECURITY_GROUP_ARN="arn:aws:ec2:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:security-group/${SECURITY_GROUP_ID}" >> $GITHUB_OUTPUT
 
       - name: Create datasync source (s3)
         id: create-datasync-source-location
         run: |
-            echo DATASYNC_SOURCE_LOCATION_ARN=$(aws datasync create-location-s3 --s3-bucket-arn arn:aws:s3:::arn:aws:s3:::${{ github.event.inputs.destination_env }}-ldap-data-refresh-incoming --s3-config BucketAccessRoleArn=arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/ldap-data-refresh-role-${{ github.event.inputs.source_env }} --subdirectory ${{ steps.get-directory.outputs.DIRECTORY }} --tags Key=Name,Value=gha-ldap-data-refresh-${{github.run_id }} --output text --query 'LocationArn') >> $GITHUB_OUTPUT
+            echo DATASYNC_SOURCE_LOCATION_ARN=$(aws datasync create-location-s3 --s3-bucket-arn arn:aws:s3:::arn:aws:s3:::${{ github.event.inputs.destination_env }}-ldap-data-refresh-incoming --s3-config BucketAccessRoleArn=arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/ldap-data-refresh-role-${{ github.event.inputs.github.event.inputs.destination_env }} --subdirectory ${{ steps.get-directory.outputs.DIRECTORY }} --tags Key=Name,Value=gha-ldap-data-refresh-${{github.run_id }} --output text --query 'LocationArn') >> $GITHUB_OUTPUT
 
       - name: Create datasync destination (efs)
         id: create-datasync-destination-location
@@ -343,17 +354,6 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
           role-session-name: githubactionsrolesession
           aws-region: "eu-west-2"
-
-      - name: install aws-cli
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip
-          sudo pip3 install awscli
-      - name: install aws-cli
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-pip
-          sudo pip3 install awscli
 
       - name: Scale ECS Service back to 1
         id: scale-ecs-service
