--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -42,7 +42,7 @@ jobs:
           source_env="${{ github.event.inputs.source_env }}"
           destination_env="${{ github.event.inputs.destination_env }}"
           
-          if [[ "${source_env}" == "production-prod" && "${destination_env}" != "preproduction-preprod" ]]; then
+          if [[ "${source_env}" == "prod" && "${destination_env}" != "preprod" ]]; then
             echo "Cannot copy from prod to ${destination_env}"
             exit 1
           fi
@@ -72,7 +72,13 @@ jobs:
             echo "Destination environment must be a higher environment than the source environment"
             exit 1
           fi
-                    
+          
+          # check that the difference between the two indexes is 1
+            if [ $((source_env_index - destination_env_index)) -ne 1 ]; then
+                echo "Data refresh can only be performed between adjacent environments
+                exit 1
+            fi
+          
           echo "Copying from ${source_env} to ${destination_env}"
   destination-pre:
     needs:
